...
        
        switch typeOfNotification {
        case "medicine" :
            notificationMessageButton.setTitle("Medication reminder", for: .normal)
            notificationImage.image = UIImage(named: "pill")
        case "contactGP" :
            notificationMessageButton.setTitle("Talk to your GP", for: .normal)
            notificationImage.image = UIImage(named: "call_button")
        default:
            break;
        }
    }
    
...
