...
        //dataEntries.append(ChartDataEntry(x: 0, y: 0))
        //let chartDataSet = LineChartDataSet(values: dataEntries, label: "Pressure")
        //let chartData = LineChartData(dataSet: chartDataSet)
        //breathLineView.data = chartData

        let button = UIButton(frame: CGRect(x: 100, y: 100, width: 100, height: 50))
        button.setTitle("Test Button", for: .normal)
        button.backgroundColor = UIColor.blue
        button.addTarget(self, action: #selector(buttonAction), for: .touchUpInside)
        
        self.view.addSubview(button)

        // Do any additional setup after loading the view.
...
